# naim-atom-home-assistant

./: .gitignore  CLAUDE.md  README.md  TODO.md  hacs.json  info.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/workflows/: python-checks.yml  release.yaml
custom_components/naim_media_player/: __init__.py  client.py  config_flow.py  const.py  exceptions.py  manifest.json  media_player.py  state.py  websocket.py
custom_components/naim_media_player/translations/: en.json
docs/: docker-test-environment.md
docs/superpowers/plans/: 2026-04-24-home-assistant-stage-deploy.md  2026-04-24-v0.4.0-architecture-cleanup.md
docs/superpowers/specs/: 2026-04-24-home-assistant-stage-deploy-design.md  2026-04-24-v0.4.0-architecture-cleanup-design.md
scripts/: ha_stage.py
tests/: conftest.py  test_client.py  test_config_flow.py  test_ha_stage.py  test_init.py  test_media_player.py  test_media_player_helpers.py  test_state.py  test_websocket.py
