[project]
name = "naim-atom-home-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "aiohttp>=3.9.3",
    "homeassistant>=2024.3.3",
    "pytest-aiohttp==1.0.5",
    "pytest-asyncio==0.24.0",
    "pytest-homeassistant-custom-component==0.13.190",
    "pytest-timeout==2.3.1",
    "pytest==8.3.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.4",
    "coverage>=7.6.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]



[tool.pytest.ini_options]
addopts = "--cov=custom_components/naim_media_player --cov-report=html:htmlcov --cov-report=xml:coverage.xml --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git"]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

filterwarnings = [
    "error",
    "ignore::RuntimeWarning",
    "ignore::DeprecationWarning",

]

